--- a/templates/index.html
+++ b/templates/index.html
@@ -11,36 +11,96 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css')}}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png')}} ">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon-16x16.png')}} ">
-    <link rel="manifest" href="{{ url_for('static', filename='images/site.webmanifest')}} ">
+    <!-- <link rel="manifest" href="{{ url_for('static', filename='images/site.webmanifest')}} "> -->
+    <script src="{{ url_for('static', filename='js/showChart.js')}}"></script>
 </head>
 
 <body class="bg-dark">
     <img src="{{ url_for('static', filename='images/logo.jpg')}}" alt="Bull vs. Bear" width="88" height="88">
-    <main class="container">
+    <main class="container-xxl">
 
         <div class="search-container">
-        <form method="POST" autocomplete="off" role="search" id="form" class="text-center col-xs-12 col-sm-12 col-md-10 col-lg-10">
-            <input type="search" id="query" placeholder="Search Company or Stock Ticker..." >
-            <button id="searchBtn" type='submit' class='btn-default'>
-                <svg viewBox="0 0 1024 1024">
-                    <path class="path1"
-                        d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z">
-                    </path>
-                </svg>
-            </button>
-        </form>
-    </div>
+            <form method="POST" autocomplete="off" role="search" id="form"
+                class="text-center col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                <input type="search" id="query" placeholder="Search Company or Stock Ticker...">
+                <button id="searchBtn" type='submit' class='btn-default'>
+                    <svg viewBox="0 0 1024 1024">
+                        <path class="path1"
+                            d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z">
+                        </path>
+                    </svg>
+                </button>
+            </form>
+        </div>
+        <div class="container-fluid mt-lg-5 pt-lg-5">
+            <h2 class="text-white text-center">{{cName}}</h2>
+            <canvas id="stockchart" class="text-white"></canvas>
+            <script>
+                var labels = []
+                var closeData = []
+                '{% for i in labels %}'
+                labels.push('{{ i }}')
+                '{% endfor %}'
+                '{% for i in data %}'
+                closeData.push('{{ i }}')
+                '{% endfor %}'
+                console.log(closeData)
+                console.log(labels)
+                var config = {
+                    type: 'line',
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: "Close Price",
+                            fill: false,
+                            borderColor: "#bae755",
+                            pointRadius: 0,
+                            data: closeData,
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        legend: {
+                            display: true
+                        },
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: false
+                                }
+                            }],
+                            xAxes: [{
+                                type: 'time',
+                                time: {
+                                    unitStepSize: 3,
+                                    displayFormats: {
+                                        'day': 'MMM YY',
+                                        'month': 'MMM YY',
+                                        'year': 'MMM YY',
+                                    }
+                                }
+                            }]
+                        }
+                    }
+                };
+
+                var ctx = document.getElementById('stockchart').getContext("2d");
+                new Chart(ctx, config)            
+            </script>
+        </div>
     </main>
 
-    <footer id="footer" class="py-2 bg-secondary text-light text-center">
+    <!-- <footer id="footer" class="py-2 bg-secondary text-light text-center">
         <div class="container text-center"></div>
         <p>Stock Prediction Analysis - Final Project</p>
         <p>&copy; Copyright UTSA Bootcamp 2021</p>
-    </div>
-    </footer>
+        </div>
+    </footer> -->
 </body>
 
 </html>
