Added search function to populate graph by ticker

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,8 +2,9 @@ main {
     width: 100% !important;
 }
 
-img {
+#logo {
     padding: 10px;
+    margin-left: 10px;
     float: left;
     border-radius: 15px;
 }
