--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                     <a class="text-white nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="text-white nav-link">Project Info</a>
+                    <a href="/project-info" class="text-white nav-link">Project Info</a>
                 </li>
             </ul>
         </div>
