adjusted searchbar text

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <div class="search-container">
             <form action="/get-stock" method="POST" autocomplete="off" role="search" id="searchform"
                 class="text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <input type="text" name="search" id="query" placeholder="Search Company or Stock Ticker...">
+                <input type="text" name="search" id="query" placeholder="Enter Stock Ticker...">
                 <button id="searchBtn" type='submit' class='btn-default'>
                     <svg viewBox="0 0 1024 1024">
                         <path class="path1"
