--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse">
             <ul class="px-5 navbar-nav">
                 <li class="nav-item active">
-                    <a class="text-white nav-link" href="/">Home</a>
+                    <a class="text-white nav-link" href="/Home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="/project-info" class="text-white nav-link">Project Info</a>
